# conan-issue

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.py  conan_install.py  conanfile.py  requirements.txt
.devcontainer/: Dockerfile
cmake/presets/: common.json
source/: CMakeLists.txt
